# Indusmatica

./: README.md
Ejercicios/: Final_2023_2_binario.rar  Lab6_2024-2.rar
Ejercicios/Lab1/Cartelera_PC1_2023-1/: FuncionesAuxiliares.cpp
Ejercicios/Lab1/EntradaYSalidaDeDatosLab01-2024-1/: FuncionesAuxiliares.cpp  main.cpp
Ejercicios/Lab1/Lab1_2024-2/: Datos.txt  Reporte.txt
Ejercicios/Lab1/RedirecionamientoDeE-SLab01-2023-2/: FuncionesAuxiliares.cpp
Ejercicios/Lab10/Lab10_2024-1/: Fecha.h  FuncionesAuxiliares.cpp  Libro.h  main.cpp
Ejercicios/Lab10_Kenyi/Lab10_2023_2/: Articulo.h  ArticuloVendido.h  FuncionesAuxiliares.cpp  FuncionesAuxiliares.h  ReporteDePagos.txt  Vendedor.h  main.cpp
Ejercicios/Lab10_Kenyi/Lab10_2024_1/: Cliente.h  Fecha.h  FuncionesAuxiliares.cpp  FuncionesAuxiliares.h  Libro.h  ReporteDeVentasPorLibro.txt  Venta.h  main.cpp
Ejercicios/Lab2/Lab02-2023-1/: FuncionesAuxiliares.h  main.cpp
Ejercicios/Lab2/Lab2-2023-2/: FuncionesAuxiliares.h
Ejercicios/Lab2/Lab2-2024-1/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h  (+1 more)
Indusmática/5to ciclo/Progra 2/Lab 9/Lab09_Ficticio_con_char_dinamico/: Automovil.cpp  Automovil.h  CMakeLists.txt  Cola.cpp  Cola.h  Conductor.cpp  Conductor.h  Infracciones.cpp  Infracciones.h  Multa.cpp  Multa.h  Nodo.cpp  Nodo.h  Persona.cpp  Persona.h  Reporte.txt  Unidades.csv  main.cpp
Lab1/: CarteleraDeCines.txt
Lab1/Cartelera_PC1_2023-1/: FuncionesAuxiliares.h  main.cpp
Lab1/Lab1_2024-2/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h
Lab1/RedirecionamientoDeE-SLab01-2023-2/: FuncionesAuxliares.h  main.cpp
(+4751 files in other folders)
